--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 </svg>
             </div>
         </div>
+        <div class="display" id="display"></div>
         <div id="operate">
             <button id="turn_on">ON</button>
             <button id="turn_off">OFF</button>
-
         </div>
         <script type="module" src="script.js"></script>
 </body>
